Istio/enforce-strict-mtls-on-circuit.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: circuit
spec:
  mtls:
    mode: STRICT
