Istio/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: istioenabled
  labels:
     istio-injection: enabled
