Istio/peerauthentication.yaml
# Quelle muss Istio-Mesh sein (mTLS)
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
spec:
  mtls:
    mode: STRICT
