Istio/tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tester
spec:
  containers:
  - name: tester
    image: alpine:3
    command:
    - sleep
    - "5000"
