Istio/simple-deployment-v1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  selector:
    app: www
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 4
  minReadySeconds: 4
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      name: www
      labels:
        app: www
        version: v1
    spec:
      containers:
      - name: image1
        image: erkules/nginxhostname
