Istio/simple-deployment-v2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  selector:
    app: www
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-v2
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 1
  minReadySeconds: 4
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      name: www
      labels:
        app: www
        version: v2
    spec:
      containers:
      - name: image1
        image: erkules/nginxhostname:v2
