Istio/simple-destination-rule-v1-v2-delay.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: www
spec:
  host: www
    #trafficPolicy:
  #  loadBalancer: 
  #    simple: LEAST_CONN|ROUND_ROBIN
  # tls:
  #   mode: SIMPLE
  subsets:
    - name:  hallo
      labels:
        version: v1
    - name:  welt
      labels:
        version: v2
