Istio/simple-destination-rule-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: www
spec:
  host: www
  subsets:
    - name:  hallo
      labels:
        version: v1
    - name:  welt
      labels:
        version: v2
