Istio/simple-virtual-service-v1-v2-delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: www
spec:
  hosts:
# Ziel vom curl
    - 'test.hallo'
    - 'www'
  gateways:
    - gateway
    - mesh
  http:
    - fault:
        delay:
          fixedDelay: 3s
          percentage:
            value: 100
      route:
      - destination:
          host: www
          subset: hallo
          port:
            number: 80
        weight: 50
      - destination:
          host: www
          subset: welt
          port:
            number: 80
        weight: 50
