Istio/simple-virtual-service-v1-v2-user-agent.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: www
spec:
  hosts:
# Ziel vom curl
    - 'test.hallo'
    - 'www'
  gateways:
    - gateway
    - mesh
  http:
    - route:
      - destination:
          host: www
          subset: hallo
          port:
            number: 80
      match:
      - headers:
          user-agent:
            regex: '.*k8s.*'
    - route:
      - destination:
          host: www
          subset: welt
          port:
            number: 80
