Istio/simple-virtual-service-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: www
spec:
  hosts:
# Ziel vom curl
    - 'test.hallo'
    - 'www'
  gateways:
    - gateway
    - mesh
  http:
    - route:
      - destination:
          host: www
          subset: hallo
          port:
            number: 80
        weight: 10
      - destination:
          host: www
          subset: welt
          port:
            number: 80
        weight: 90
