Istio/simple-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: www
spec:
  hosts:
# Ziel vom curl
    - 'test.hallo'
    - 'www'
  gateways:
    - gateway
    - mesh
  http:
    - route:
      - destination:
          host: www
          port:
            number: 80
