Istio/split.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: split
spec:
  hosts:
# Ziel vom curl
    - 'split.hostname'
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: split
          port:
            number: 80
          subset: v1
        weight: 20
      - destination:
          host: split
          port:
            number: 80
          subset: v2
        weight: 80

---
# DestinationRules are applied after VirtualService

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-split
spec:
  host: split
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: split
spec:
  selector:
    applikation: split
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitv1
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 4
  minReadySeconds: 4
  selector:
    matchLabels:
      app: splitv1
  template:
    metadata:
      name: splitv1
      labels:
        app: splitv1
        version: v1
        applikation: split
    spec:
      containers:
      - name: image1
        image: erkules/nginxhostname

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitv2
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  replicas: 4
  minReadySeconds: 4
  selector:
    matchLabels:
      app: splitv2
  template:
    metadata:
      name: splitv2
      labels:
        app: splitv2
        version: v2
        applikation: split
    spec:
      containers:
      - name: image1
        image: erkules/nginxhostname:v2
