Istio/authenticationpolicy-sa.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: sa-is-ok
spec:
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/circuit/sa/default"]
