Istio/authenticationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: in-mesh-is-ok
spec:
  rules:
  - from:
    - source:
        principals: ["*"]
